--- a/shardingsphere-test/shardingsphere-integration-test/shardingsphere-integration-test-suite/src/test/resources/docker/dbtbl_with_readwrite_splitting_and_encrypt/mysql/proxy/conf/config-dbtbl-with-readwrite-splitting-and-encrypt.yaml
+++ b/shardingsphere-test/shardingsphere-integration-test/shardingsphere-integration-test-suite/src/test/resources/docker/dbtbl_with_readwrite_splitting_and_encrypt/mysql/proxy/conf/config-dbtbl-with-readwrite-splitting-and-encrypt.yaml
@@ -342,8 +342,6 @@ rules:
       type: AES
       props:
         aes-key-value: 123456abc
-    test:
-      type: test
   tables:
     t_user:
       columns:
@@ -362,4 +360,4 @@ rules:
         pwd:
           plainColumn: plain_pwd
           cipherColumn: cipher_pwd
-          encryptorName: test
+          encryptorName: aes_encryptor
