--- a/shardingsphere-proxy/shardingsphere-proxy-bootstrap/src/main/resources/conf/server.yaml
+++ b/shardingsphere-proxy/shardingsphere-proxy-bootstrap/src/main/resources/conf/server.yaml
@@ -46,13 +46,14 @@
 #    provider:
 #      type: NATIVE
 #  - !TRANSACTION
-#    defaultType: LOCAL
-#
+#    defaultType: XA
+#    props:
+#      xa-transaction-manager-type: Atomikos
+
 #props:
 #  max-connections-size-per-query: 1
 #  executor-size: 16  # Infinite by default.
 #  proxy-frontend-flush-threshold: 128  # The default value is 128.
-#  xa-transaction-manager-type: Atomikos
 #  proxy-opentracing-enabled: false
 #  proxy-hint-enabled: false
 #  sql-show: false
