--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,7 +55,7 @@ jobs:
         with:
           java-version: 8
       - name: Build with Maven
-        run: ./mvnw -B clean cobertura:cobertura -D"maven.javadoc.skip"=true install
+        run: ./mvnw -B clean cobertura:cobertura install
       - name: Build examples with Maven
         run: ./mvnw -B -f examples/pom.xml clean package -DskipTests
   
